Fixed some HTML bugs in the header, the section tag, added an article tag. Fixed the about me section adding the about me section and willingness to work with others. Added pseudo-class in order to style the links. Wrapped the list items and set the margin to auto in order to center the list

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h2 {
 .content-wrap {
   max-width: 800px;
   margin: 0 auto;
-  padding: 60px, 0;
+  padding: 60px;
 }
 
 
@@ -74,7 +74,6 @@ footer {
 .contact-list a {
   padding: 5px;
   display: inline-block;
-  color: tomato;
 }
 
 
@@ -83,15 +82,38 @@ footer {
 }
 
 .navigation a {
-  color: yellow;
   text-decoration: none;
   
 }
 
-#projects a {
-  color: rgb(5, 222, 9);
-}
-
 .projects{
   padding: 5px;
+}
+
+img {
+  width: 400px;
+}
+
+ /* unvisited link */
+a:link {
+  color: rgb(113, 113, 5);
+}
+
+/* visited link */
+a:visited {
+  color: #00FF00;
+}
+
+/* mouse over link */
+a:hover {
+  color: #FF00FF;
+}
+
+/* selected link */
+a:active {
+  color: #0000FF;
+} 
+
+ .list{
+  margin: auto;
 }
